# career-bot

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  UNIFIED_SDK_GUIDE.md  app.py  pyproject.toml
agent/: llm_client.py  me.py  prompt.py
config/: settings.py
tools/: __init__.py  handlers.py  notifications.py  schemas.py
